--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
       sdk: flutter
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
+  provider: ^6.1.5
+  shared_preferences: ^2.5.3
+  google_sign_in: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
